# maor

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md
crates/maor-audio-vae/: Cargo.toml
crates/maor-audio-vae/src/: attention.rs  causal_conv2d.rs  decoder.rs  lib.rs  resnet.rs  upsample.rs  vocoder.rs
crates/maor-core/: Cargo.toml
crates/maor-core/src/: config.rs  latent_state.rs  lib.rs  ops.rs  patchify.rs  statistics.rs  types.rs
crates/maor-nn/: Cargo.toml
crates/maor-nn/src/: activation.rs  adaln.rs  attention.rs  conv3d.rs  feed_forward.rs  lib.rs  lora.rs  pixel_norm.rs  rope.rs  text_projection.rs  timestep_embedding.rs
crates/maor-pipeline/: Cargo.toml
crates/maor-scheduler/: Cargo.toml
crates/maor-scheduler/src/: diffusion_step.rs  guiders.rs  lib.rs  schedule.rs
crates/maor-text-encoder/: Cargo.toml
crates/maor-text-encoder/src/: connector.rs  encoder.rs  feature_extractor.rs  gemma3.rs  lib.rs  tokenizer.rs
crates/maor-transformer/: Cargo.toml
crates/maor-transformer/src/: block.rs  lib.rs  modality.rs  model.rs  preprocessor.rs
crates/maor-video-vae/: Cargo.toml
crates/maor-video-vae/src/: decoder.rs  lib.rs  resnet.rs  upsample.rs  upsampler.rs
