[package]
name = "maor-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
approx = "0.5"
