[package]
name = "maor-text-encoder"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
maor-core = { path = "../maor-core" }
maor-nn = { path = "../maor-nn" }
tokenizers = { workspace = true }
anyhow = { workspace = true }
